Completed Reading Journal 1-8

--- a/reading-journal-07.ipynb
+++ b/reading-journal-07.ipynb
@@ -28,7 +28,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A dictionary is a list filled with two items connected to each other."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes:\n",
+    "dict.  = list, but indices can be almost any type\n",
+    "\n",
+    "associates a key ( set of indicies) with a set of values\n",
+    "- called key-value pair, sometimes item"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,10 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import doctest\n",
@@ -65,15 +76,13 @@
     "    \"\"\"Return a dictionary that counts occurrences of each character in s.\n",
     "    \n",
     "    Examples:\n",
+    "    >>> histogram('asasdff')\n",
+    "    {'a': 2, 's': 2, 'd': 1, 'f': 2}\n",
     "    \"\"\"\n",
     "    d = dict()\n",
     "    for c in s:\n",
-    "        if c not in d:\n",
-    "            d[c] = 1\n",
-    "        else:\n",
-    "            d[c] += 1\n",
+    "        d[c] = d.get(c,0) + 1\n",
     "    return d\n",
-    "\n",
     "doctest.run_docstring_examples(histogram, globals())"
    ]
   },
@@ -98,18 +107,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 11.4"
    },
    "outputs": [],
    "source": [
     "def reverse_lookup(d, v):\n",
+    "    \"\"\"\n",
+    "    reverse_lookup({'a': 2, 's': 2, 'd': 1, 'f': 2}, 2)\n",
+    "    ['a','s','f']\n",
+    "    reverse_lookup({'a': 2, 's': 2, 'd': 1, 'f': 2}, 3)\n",
+    "    ValueError\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    all_keys = []\n",
     "    for k in d:\n",
     "        if d[k] == v:\n",
-    "            return k\n",
-    "    raise ValueError"
+    "            all_keys.append(v)\n",
+    "    raise ValueError\n",
+    "\n",
+    "    doctest.run_docstring_examples(reverse_lookup, globals())"
    ]
   },
   {
@@ -129,7 +147,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Keys have to be hashable, which works best if they are immutable"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,7 +163,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A tuple is an immutable sequence of values indexed by integers."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,13 +197,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 12.1"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def sumall(*args):\n",
+    "    \"\"\"\n",
+    "    >>> sumall(8,5,3)\n",
+    "    16\n",
+    "    >>> sumall(8)\n",
+    "    8\n",
+    "    >>> sumall(2,-2,3)\n",
+    "    3\n",
+    "    \"\"\"\n",
+    "    resulting_sum = 0\n",
+    "    for i in args:\n",
+    "        resulting_sum += i\n",
+    "    return resulting_sum    \n",
+    "\n",
+    "doctest.run_docstring_examples(sumall, globals())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,7 +250,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "You could use a tuple as keys to a dictionary\n",
+    "\n",
+    "A list when you want to store values in a mutable object\n",
+    "\n",
+    "A string to create a sentence or some words"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -231,13 +274,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 12.3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d\n",
+      "c\n",
+      "a\n",
+      "b\n",
+      " \n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "def most_frequent(input_string):\n",
+    "    \"\"\"\n",
+    "    >>> most_frequenct(\"aaaaaa bbbbb ccccccc dddddddd e\")\n",
+    "    \"\"\"\n",
+    "    #Return a dictionary that counts occurrences of each character in s.\n",
+    "    d = histogram(input_string) \n",
+    "    #creates empty list\n",
+    "    sentence_list = []\n",
+    "    #iterates through list created by d.items that has all keys with values\n",
+    "    #in this case it iterates through the list, getting the letter and frequency\n",
+    "    #then switching it so that the frequency is the first value so that when we\n",
+    "    #later sort through this, the sorting is based off of the freqency\n",
+    "    for letter, frequency in d.items():\n",
+    "        sentence_list.append((frequency, letter))\n",
+    "    #reorders the values in the list so that the letters with the highest\n",
+    "    #frequency appear first, lowest frequency last.\n",
+    "    sentence_list.sort(reverse = True)\n",
+    "    #goes through the sorted list and prints out the letters in the sorted order\n",
+    "    for frequency, letter in sentence_list:\n",
+    "        print(letter)\n",
+    "    \n",
+    "most_frequent(\"aaaaaa bbbbb ccccccc dddddddd e\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If I wanted to compare frequencies across languages, I would import a text file to read from (using open(filename).read() ), and run that though the code, as well as print out not just the letter, but the frequency in which they occur(maybe even presenting the frequency as a percentage). I might also take out the spaces and non-letter characters from the file, and make it all lower case."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -248,6 +333,25 @@
     "1. Read the [5 Whys](https://en.wikipedia.org/wiki/5_Whys), introduction and Examples.\n",
     "2. Read [An Introduction to 5-why](http://www.bulsuk.com/2009/03/5-why-finding-root-causes.html).\n",
     "3. In the space below, describe a problem you've observed or encountered outside of this class, and take it to at least two levels of why. This can be a problem that you've run into personally, or a \"broken process\" in a institution you're a part of or interact with."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My phone battery is not charging\n",
+    "\n",
+    "why?\n",
+    "\n",
+    "The usb adapter cord is broken\n",
+    "\n",
+    "why?\n",
+    "\n",
+    "The cord has worn out from use\n",
+    "\n",
+    "why?\n",
+    "\n",
+    "The cord is fragile, and not well suited for its purposes."
    ]
   }
  ],
@@ -268,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
