--- a/reading-journal-08.ipynb
+++ b/reading-journal-08.ipynb
@@ -20,10 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word #0: aa\n",
+      "Word #1: aah\n"
+     ]
+    }
+   ],
    "source": [
+    "import doctest\n",
     "# Quick test: open 'words.txt' in the current folder and print the first couple entries (\"aa\", \"aah\")\n",
     "fp = open(\"words.txt\")\n",
     "for i in range(2):\n",
@@ -45,9 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pythonic\n"
+     ]
+    }
+   ],
    "source": [
     "def get_lines(filename):\n",
     "    \"\"\"\n",
@@ -80,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +111,29 @@
     "    >>> longer_than(\"documentation\", 6)\n",
     "    True\n",
     "    \"\"\"\n",
-    "    return False"
+    "    if len(word) > threshold:\n",
+    "        return True\n",
+    "    \n",
+    "    return False\n",
+    "doctest.run_docstring_examples(longer_than, globals())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['counterdemonstrations', 'hyperaggressivenesses', 'microminiaturizations']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Look for long words by using your helper function in a list comprehension\n",
     "[ word for word in get_lines(\"words.txt\") if longer_than(word, 20) ]"
@@ -122,6 +155,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def uses_only(word, allowed):\n",
     "    \"\"\"\n",
@@ -132,7 +172,14 @@
     "    >>> uses_only(\"banana\", \"ban\")\n",
     "    True\n",
     "    \"\"\"\n",
-    "    pass"
+    "    d = dict()\n",
+    "    for letter in allowed:\n",
+    "        d[letter] = d.get(letter, 1)\n",
+    "    for letter in word:\n",
+    "        if d.get(letter,0)== 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "doctest.run_docstring_examples(uses_only, globals())"
    ]
   },
   {
@@ -150,10 +197,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def find_triple_double():\n",
+    "    \"\"\"Reads a word list and prints words with triple double letters.\"\"\"\n",
+    "    word_list = open('words.txt')\n",
+    "    for line in word_list:\n",
+    "        word = line.split()\n",
+    "        if have_three_consecutive_letters(word):\n",
+    "            print(word)\n",
+    "def have_three_consecutive_letters(word):\n",
+    "    \"\"\"\n",
+    "    >>> have_three_consecutive_letters(\"xaaabbcc\")\n",
+    "    True\n",
+    "    >>> have_three_consecutive_letters(\"asssfeccess\")\n",
+    "    False\n",
+    "    \"\"\"\n",
+    "    for i in range(0,len(word)-5):\n",
+    "        if three_consecutive(word[i:i+6]):\n",
+    "            return True\n",
+    "    return False\n",
+    "def three_consecutive(six_letters):\n",
+    "    \"\"\"\n",
+    "    >>> three_consecutive(\"aabbcc\")\n",
+    "    True\n",
+    "    >>> three_consecutive(\"aaasdc\")\n",
+    "    False\n",
+    "    \"\"\"\n",
+    "    for i in range(0,3):\n",
+    "        if pair_same(six_letters[i*2:(i*2)+2]) == False:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "def pair_same(two_letters):\n",
+    "    \"\"\"\n",
+    "    >>> pair_same (\"aa\")\n",
+    "    True\n",
+    "    >>> pair_same (\"bc\")\n",
+    "    False\n",
+    "    \"\"\"\n",
+    "    if two_letters[0] == two_letters[1]:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "doctest.run_docstring_examples(have_three_consecutive_letters, globals())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "word= \"aabBcc\"\n",
+    "a = True\n",
+    "for i in range(0,3):\n",
+    "        if pair_same(word[i*2:(i*2)+2]) == False:\n",
+    "            a = False\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bookkeeper\n",
+      "bookkeepers\n",
+      "bookkeeping\n",
+      "bookkeepings\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_triple_double()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,6 +332,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********************************************************************\n",
+      "File \"__main__\", line 4, in NoName\n",
+      "Failed example:\n",
+      "    get_words('WordsTest.txt')\n",
+      "Expected nothing\n",
+      "Got:\n",
+      "    ['hello', 'i', 'am', 'writing', 'this', 'as', 'a', 'test', 'a', 'test', 'to', 'ensure', 'that', 'this', 'code', 'is', 'working', 'properly', 'i', 'hope', 'it', 'works', 'out', 'after', 'all', 'this', 'will', 'be', 'important']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def get_words (filename):\n",
+    "    \"\"\"\n",
+    "    >>> get_words('WordsTest.txt')\n",
+    "    ['hello', 'i', 'am', 'writing', 'this', 'as', 'a', 'test', 'a', 'test', 'to', 'ensure', 'that', 'this', 'code', 'is', 'working', 'properly', 'i', 'hope', 'it', 'works', 'out', 'after', 'all', 'this', 'will', 'be', 'important']\n",
+    "    \"\"\"\n",
+    "    list_lines = get_lines(filename)\n",
+    "    word_list = []\n",
+    "    \n",
+    "    for i in range(0,len(list_lines)):\n",
+    "        word_list = word_list+ words_from_list(list_lines[i])\n",
+    "    return word_list\n",
+    "\n",
+    "def words_from_list(list):\n",
+    "    \"\"\"\n",
+    "    >>> words_from_list(\" 'Hello?' I called out, wondering, just ... thinking.\")\n",
+    "    ['hello', 'i', 'called', 'out', 'wondering', 'just', 'thinking']\n",
+    "    \"\"\"\n",
+    "    a = list.split()\n",
+    "    clean_word = []\n",
+    "    for i in a:\n",
+    "        b = i.strip(string.whitespace)\n",
+    "        stripped = b.strip(string.punctuation)\n",
+    "        if stripped.isalpha():\n",
+    "            stripped = stripped.lower()\n",
+    "            clean_word.append(stripped)\n",
+    "    return clean_word\n",
+    "\n",
+    "doctest.run_docstring_examples(get_words, globals())\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -220,6 +404,54 @@
     "_Hint_: You can use a modified version of your `histogram` function from Reading Journal 7.\n",
     "\n",
     "For fun, try comparing different books by different authors, written in different eras. Which author uses the most extensive vocabulary? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********************************************************************\n",
+      "File \"__main__\", line 3, in NoName\n",
+      "Failed example:\n",
+      "    num_words_number_times('WordsTest.txt')\n",
+      "Expected nothing\n",
+      "Got:\n",
+      "    (24, [(3, 'this'), (2, 'test'), (2, 'i'), (2, 'a'), (1, 'writing'), (1, 'works'), (1, 'working'), (1, 'will'), (1, 'to'), (1, 'that'), (1, 'properly'), (1, 'out'), (1, 'it'), (1, 'is'), (1, 'important'), (1, 'hope'), (1, 'hello'), (1, 'ensure'), (1, 'code'), (1, 'be'), (1, 'as'), (1, 'am'), (1, 'all'), (1, 'after')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "def num_words_number_times(filename):\n",
+    "    \"\"\"\n",
+    "    >>> num_words_number_times('WordsTest.txt')\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    list_words_repeating = get_words(filename)\n",
+    "    d = histogram(list_words_repeating)\n",
+    "    list_words_dic = []\n",
+    "    for word, frequency in d.items():\n",
+    "        list_words_dic.append((frequency, word))\n",
+    "    list_words_dic.sort(reverse=True)\n",
+    "    return len(list_words_dic), list_words_dic\n",
+    "\n",
+    "def histogram(list_words):\n",
+    "    \"\"\"Return a dictionary that counts occurrences of each word in s.\n",
+    "    \n",
+    "    Examples:\n",
+    "    >>> histogram(['i', 'want','to','see','if','i','can' ])\n",
+    "    {'i': 2, 'want': 1, 'to': 1, 'see': 1, 'if': 1, 'can': 1}\n",
+    "    \"\"\"\n",
+    "    d = dict()\n",
+    "    for i in range(0,len(list_words)):\n",
+    "        d[list_words[i]] = d.get(list_words[i],0) + 1\n",
+    "    return d\n",
+    "\n",
+    "doctest.run_docstring_examples(num_words_number_times, globals())"
    ]
   },
   {
@@ -246,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
