--- a/reading-journal-06.ipynb
+++ b/reading-journal-06.ipynb
@@ -46,13 +46,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is on paper, can bring if needed"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 6.4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 90\n",
+      "8100\n"
+     ]
+    }
+   ],
    "source": [
     "def b(z):\n",
     "    prod = a(z, z)\n",
@@ -93,13 +108,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 6.6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_palindrome(string_a):\n",
+    "    \"\"\"\n",
+    "    >>> is_palindrome('noon')\n",
+    "    True\n",
+    "    >>> is_palindrome('cool')\n",
+    "    False\n",
+    "    >>> is_palindrome('redivider')\n",
+    "    True\n",
+    "    \"\"\"\n",
+    "    a = len(string_a)\n",
+    "    string_a.lower\n",
+    "    if a > 1:\n",
+    "        if string_a[0]==string_a[a-1]:\n",
+    "            return is_palindrome(string_a[1:a-1])\n",
+    "        else:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return True\n",
+    "print(is_palindrome('noon'))\n",
+    "print(is_palindrome('coolerc'))\n",
+    "print(is_palindrome('redivider'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,13 +183,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 6.7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_power(a,b):\n",
+    "    if a%b == 0:\n",
+    "        if a/b > 1:\n",
+    "            return is_power(a/b,b)\n",
+    "        else:\n",
+    "            return True\n",
+    "    else:\n",
+    "        return False\n",
+    "is_power(27,3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,13 +229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true,
     "problem": "Exercise 6.8"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def gcd (a,b):\n",
+    "    if b == 0:\n",
+    "        return a\n",
+    "    else:\n",
+    "        return gcd(b,a%b)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,6 +264,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Encountering bugs is a part of everyday life. One time I encountered a bug was when I used the wrong syntax for selecting characters from a string. I realized that I was accidentally using Matlab syntax instead of Python syntax. So I then went through the code, ensuring that I was using the correct language. I then ensured that it wouldnt cause any other issues down the line. Some things I could do to prevent bugs such as this one is to go over the appropriate syntax beforehand, maybe have a little cheat sheet to ensure that I do not mix coding languages up again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -212,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
