Completed Reading Journal 09

--- a/reading-journal-09.ipynb
+++ b/reading-journal-09.ipynb
@@ -41,7 +41,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A class is a new type, or way to store data, that the programmer creates.\n",
+    "\n",
+    "defining class creates class object\n",
+    "    to create point can call point as if it were a function\n",
+    "    \n",
+    "creating new object is called instantiaion\n",
+    "\n",
+    "object = instance of class\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,13 +67,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Point:\n",
+    "    def __init__(self,x=0,y=0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "def distance_between_points(p1, p2):\n",
+    "    return((p1.x-p2.x)**2 + (p1.y - p2.y)**2)**(1/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 15.1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "P1 = Point(1,1)\n",
+    "P2 = Point(3,1)\n",
+    "print(distance_between_points(P1, P2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,13 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 15.2"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Rectangle:\n",
+    "    def __init__(self, width = 100, hieght=200, corner = Point(0,0)):\n",
+    "        self.width = width\n",
+    "        self.hieght = hieght\n",
+    "        self.corner = corner\n",
+    "    def move_rectangle(self, dx, dy):\n",
+    "        self.corner.x = dx + self.corner.x\n",
+    "        self.corner.y = dy + self.corner.y   "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,13 +144,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 15.3"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Rectangle:\n",
+    "    def __init__(self, width = 100, hieght=200, corner = Point(0,0)):\n",
+    "        self.width = width\n",
+    "        self.hieght = hieght\n",
+    "        self.corner = corner\n",
+    "    def move_rectangle(self, dx, dy):\n",
+    "        self.corner.x = dx + self.corner.x\n",
+    "        self.corner.y = dy + self.corner.y\n",
+    "    def move_rectangle_new(self, dx, dy):\n",
+    "        new_rectangle = copy.deepcopy(self)\n",
+    "        new_rectangle.corner.x = dx + new_rectangle.corner.x\n",
+    "        new_rectangle.corner.y = dy + new_rectangle.corner.y\n",
+    "        return new_rectangle"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,12 +194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Time:\n",
+    "    def __init__(self, hour =0, minute = 0, second = 0):\n",
+    "        self.hour = hour\n",
+    "        self.minute = minute\n",
+    "        self.second = second\n",
+    "def is_after(t1, t2):\n",
+    "    return (t1.hour, t1.minute, t1.second)>(t2.hour, t2.minute, t2.second)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,12 +219,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00:01:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_time(t):\n",
+    "    print('%.2d:%.2d:%.2d' % (t.hour, t.minute, t.second))\n",
+    "\n",
+    "def mul_time(time_ob, num):\n",
+    "    new_t = (time_ob.hour*60**2 + time_ob.minute*60 + time_ob.second)*num\n",
+    "    second = (new_t)%60\n",
+    "    minute_temp = new_t//60\n",
+    "    minute = minute_temp%60\n",
+    "    hour = (minute_temp//60)%24\n",
+    "    return Time(hour,minute,second)\n",
+    "\n",
+    "def find_pace(finish_t, dist):\n",
+    "    return mul_time(finish_t, 1/dist)\n",
+    "\n",
+    "finishing_time = Time(1)\n",
+    "distance = 60\n",
+    "print_time(find_pace(finishing_time, distance))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,7 +260,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "pure function"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -187,12 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Point:\n",
+    "    def __init__(self,x=0,y=0):\n",
+    "        self.x = x\n",
+    "        self.y = y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,12 +305,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "( 2 , 3 )\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point:\n",
+    "    def __init__(self,x=0,y=0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    def __str__(self):\n",
+    "        return \"( \"+str(self.x)+\" , \"+ str(self.y) + \" )\"\n",
+    "\n",
+    "temp_p = Point(2,3)\n",
+    "print(temp_p)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,12 +339,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Point:\n",
+    "    def __init__(self,x=0,y=0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    def __str__(self):\n",
+    "        return \"( \"+str(self.x)+\" , \"+ str(self.y) + \" )\"\n",
+    "    def __add__(self,other):\n",
+    "        return Point(self.x + other.x , self.y + other.y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,6 +363,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Yes, especially considering that I wrote the Point class the new and improved way at the very beginning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -259,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
