Completed Reading Journal 10

--- a/reading-journal-10.ipynb
+++ b/reading-journal-10.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "got it!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,12 +56,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kanga has pouch contents:\n",
+      "    'wallet'\n",
+      "    'car keys'\n",
+      "    <__main__.Kangaroo object at 0x7f3ea78b2828>\n",
+      "Roo has pouch contents:\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Kangaroo:\n",
+    "    def __init__(self, name, contents=None):\n",
+    "        if contents == None:\n",
+    "            contents = []\n",
+    "        self.pouch_contents = contents\n",
+    "        self.name = name\n",
+    "    def __str__(self):\n",
+    "        t = [ self.name + ' has pouch contents:' ]\n",
+    "        for obj in self.pouch_contents:\n",
+    "            s = '    ' + object.__str__(obj)\n",
+    "            t.append(s)\n",
+    "        return '\\n'.join(t)  \n",
+    "        \n",
+    "    def put_in_pouch(self , other):\n",
+    "        self.pouch_contents.append(other)\n",
+    "        \n",
+    "kanga = Kangaroo('Kanga')\n",
+    "roo = Kangaroo('Roo')\n",
+    "kanga.put_in_pouch('wallet')\n",
+    "kanga.put_in_pouch('car keys')\n",
+    "kanga.put_in_pouch(roo)\n",
+    "\n",
+    "print(kanga)\n",
+    "print(roo)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,13 +112,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 15.1"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Time:\n",
+    "    def __init__(self, hour =0, minute = 0, second = 0):\n",
+    "        self.hour = hour\n",
+    "        self.minute = minute\n",
+    "        self.second = second\n",
+    "    def __str__(self):\n",
+    "        return '%.2d:%.2d:%.2d' % (self.hour, self.minute, self.second)\n",
+    "    def __add__(self , other):\n",
+    "        result = Time()\n",
+    "        return result.sec_to_time(self.time_to_sec()+other.time_to_sec())\n",
+    "    def __sub__(self, other):\n",
+    "        result = Time()\n",
+    "        return result.sec_to_time(other.time_to_sec()- self.time_to_sec()\n",
+    "                                 \n",
+    "                                 \n",
+    "                                 )\n",
+    "    def time_to_sec(self):\n",
+    "        return self.hour*60**2 + self.minute*60 + self.second\n",
+    "    def sec_to_time(self , sec):\n",
+    "        second = (sec)%60\n",
+    "        minute_temp = sec//60\n",
+    "        minute = minute_temp%60\n",
+    "        hour = (minute_temp//60)%24\n",
+    "        return Time(hour,minute,second)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,13 +166,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 15.2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doctor Appointment \n",
+      " Start Time: 09:00:00 \n",
+      " End Time: 10:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Event:\n",
+    "    def __init__(self, name = \"\", start = None, end = None):\n",
+    "        self.name = name\n",
+    "        if start == None:\n",
+    "            start = Time(1)\n",
+    "        if end == None:\n",
+    "            end = start + Time(1)\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "    def __str__(self):\n",
+    "        return str(self.name) +\" \\n Start Time: \" + str(self.start) + \" \\n End Time: \" + str(self.end)\n",
+    "\n",
+    "a = Event(\"Doctor Appointment\", Time(9), Time(10))\n",
+    "print(a)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,13 +212,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": true,
     "solution": "Exercise 15.3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doctor Appointment \n",
+      " Start Time: 09:00:00 \n",
+      " End Time: 10:00:00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "60"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Event:\n",
+    "    def __init__(self, name = \"\", start = None, end = None):\n",
+    "        self.name = name\n",
+    "        if start == None:\n",
+    "            start = Time(1)\n",
+    "        if end == None:\n",
+    "            end = start + Time(1)\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "    def __str__(self):\n",
+    "        return str(self.name) +\" \\n Start Time: \" + str(self.start) + \" \\n End Time: \" + str(self.end)\n",
+    "    def duration(self):\n",
+    "        time_ob =  self.start-self.end\n",
+    "        return time_ob.time_to_sec()//60\n",
+    "a = Event(\"Doctor Appointment\", Time(9), Time(10))\n",
+    "print(a)\n",
+    "a.duration()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,11 +275,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Agenda:\n",
+    "    def __init__(self, contents = None):\n",
+    "        if contents = None:\n",
+    "            contents = []\n",
+    "        self.contents = contents\n",
+    "    def add_to_contents(self, new_contents):\n",
+    "        self.contents.append(new_contents)\n",
+    "        self.contents.sort()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
