Completed Reading Journal 11

--- a/reading-journal-11.ipynb
+++ b/reading-journal-11.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Currently, the data I am gathering is from Edgar Allen Poe's works. As a result, I end up side stepping a lot of the potential issues that could have potentially been an issue. Poe's works are freely available to the public, have no copyright, and does not involve the collection of personal information."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,11 +61,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "overfitting is when the model is trained too closely to the training set of data, to the point where it is no longer a viable or useful method for evaluating any other data set.\n",
+    "If I choose specific words to not analyize that are only found in poe's works, and not other works, then I could potentially run into this problem.\n",
+    "I could choose words to not include from a list of the most common words in the English language, or simply just analyze all of the words.\n",
+    "\n",
+    "selection bias is when your data does not truly represent the entire population, or does so in an uneven manner, such as favoring one opinion or circumstance over another.\n",
+    "It will show up in my project idea, as I am onky taking the stories from a single volume of a book that has all of poe's works. As this volume contains the most famous short stories, the selection is biased. I also included the Raven, which is not a short story, but rather a poem.\n",
+    "However, it does include a wide range of his famous short stories, which is what I purposely wanted to analyze, as well as his most famous poem. I wanted to see what would make people classify Poe's works as so good, and by choosing a rather large selection of his most famous works, I actually get closer to what I was aiming towards in the first place."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,14 +91,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_files(directory):\n",
     "    \"\"\"Print the names of files in given 'directory' and its subdirectories\"\"\"\n",
-    "    pass"
+    "    for name in os.listdir(dirname):\n",
+    "        path = os.path.join(dirname, name)\n",
+    "        if os.path.isfile(path):\n",
+    "            print(path)\n",
+    "        else:\n",
+    "            print_files(path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -118,7 +145,15 @@
    "outputs": [],
    "source": [
     "def sed(pattern, replacement, src_fn, dest_fn):\n",
-    "    pass"
+    "    source = open(src_fn, 'r')\n",
+    "    dest = open(dest_fn, 'w')\n",
+    "\n",
+    "    for line in source:\n",
+    "        line = line.replace(pattern, replacement)\n",
+    "        fout.write(line)\n",
+    "\n",
+    "    fin.close()\n",
+    "    fout.close()"
    ]
   }
  ],
@@ -138,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
