Completed Reading Journal 12

--- a/reading-journal-12.ipynb
+++ b/reading-journal-12.ipynb
@@ -24,9 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-2b80cf3cb0a8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mreciprocal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
    "source": [
     "value = 0\n",
     "reciprocal = 1/value"
@@ -34,9 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-1e110706308e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"pasta\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mreciprocal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'int' and 'str'"
+     ]
+    }
+   ],
    "source": [
     "value = \"pasta\"\n",
     "reciprocal = 1/value"
@@ -51,11 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'value' must be a number, try again\n",
+      "Reciprocal is: 0.14285714285714285\n"
+     ]
+    }
+   ],
    "source": [
-    "value = 7  # Test some other cases\n",
+    "value = 'hi'  # Test some other cases\n",
     "try:\n",
     "    reciprocal = 1/value\n",
     "except ZeroDivisionError:\n",
@@ -84,15 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Snippet of MP3 code that handles exceptions\n",
+    "import requests\n",
     "try:\n",
+    "    Raven_full_text = requests.get('http://www.gutenberg.org/cache/epub/1065/pg1065.txt').text\n",
     "    # Your code that e.g. reads a file or downloads something\n",
     "\n",
-    "except YourSpecificException:\n",
+    "except requests.exceptions.ConnectionError:\n",
+    "    print(\"Non-Existent URL\")\n",
     "    # Replace \"YourSpecificException\" above with the actual type, \n",
     "    # and put some code here to handle it (even if it's just printing an error and exiting)\n",
     "    "
@@ -122,7 +158,13 @@
     "solution": "Exercise 15.1"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "fout = open(save_file, 'w')\n",
+    "for freq, word in dic_list:\n",
+    "    line = freq+ ' \\t ' + word + ' \\n '\n",
+    "    fout.write(line)\n",
+    "fout.close()"
+   ]
   }
  ],
  "metadata": {
@@ -141,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
